Fix Transform Tool to show reordered layers preview in Fast mode

Obviosly, we should create a preview of layers in their rendering order,
not in the order the user selected them.

BUG:503201