plugins/tools/tool_transform2/kis_tool_transform.h
@@ -232,7 +232,6 @@ public Q_SLOTS:
     void slotConvexHullCalculated(QPolygon hull, void *strokeStrategyCookie);
 
 private:
-    QList<KisNodeSP> fetchNodesList(ToolTransformArgs::TransformMode mode, KisNodeSP root, bool isExternalSourcePresent);
     QScopedPointer<QMenu> m_contextMenu;
 
     void startStroke(ToolTransformArgs::TransformMode mode, bool forceReset);
