plugins/tools/tool_transform2/kis_transform_utils.cpp
@@ -706,6 +706,7 @@ QList<KisNodeSP> KisTransformUtils::fetchNodesList(ToolTransformArgs::TransformM
         }
     }
 
+    result = KisLayerUtils::sortMergeableInternalNodes(result);
     return result;
 }
 
